manifests/workshop/envoy-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workshop-envoy
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
