manifests/workshop/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: workshop-gateway
  namespace: workshop-envoy
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  gatewayClassName: workshop-envoy-oci
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
